samples/_failures_safe/1761214324_bb4695_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_212836dc.c: In function ‘main’:
./samples/SAFE/__tmp_212836dc.c:145:5: error: expected expression at end of input
  145 |     int num_operations = sizeof(operations) /
      |     ^~~
./samples/SAFE/__tmp_212836dc.c:145:5: error: expected declaration or statement at end of input
